# Emily-Test

./: EmilyTest.txt  Locations.cshtml  NEW-TEST  NEW-TEST1  NOFARCHANGE  RenameXYZ  TagTest  TestFF.txt  TestFF2  TestFF2CHANGENAME  TestFileNameRenameWithContentChange  TestFileNameRenameWithContentChange2  TestFileNameRenameWithContentChange3  TestFileNameRenameWithNoContentChange  TestFileRename3  TestRR  TestsResolvedDeleted  WithContentChange  WithContentChange2  WithContentChange3  pyproject.toml  test.txtrr  test41txt  testnote2
