[project]
name = "test_package"
version = "1.2.3"
description = "A test package managed by uv."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "test", email = "test@test.com" },
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "requests>=2.32.0,<3.0",
    "numpy>=1.27.0",
]


[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.10.0",
]
test = [
    "ruff>=0.10.0",
    "pre-commit>=4.0.0"
]
prod = [
    "gunicorn>=23.0.0"
]

[tool.uv]
# legacy syntax (will be combined with dependency-groups.dev)
dev-dependencies = ["black>=24.0.0", "flask>=3.0"]
